--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 </div>
                 <div class="profession" style="--i:3;">
                     <i class='bx bx-video-recording'></i>
-                    <h3>Videographer</h3>
+                    <h3>Videographe</h3>
                 </div>
 
                 <div class="circle"></div>
