--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cool Responsive Portfolio Website Design</title>
+    <title>Portfolio</title>
 
     <!-- swiper css -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
@@ -43,11 +43,11 @@
             <h1>Gabriel</h1>
             <h1>Henrique Arndt</h1>
             <p>
-                I'm a web developer who loves to create beautiful and functional websites
-                for people who want to make a difference in the world.
+                Sou um desenvolvedor Full Stack JAVA apaixonado por desafios, estou em constante busca pela excelência no desenvolvimento de software. Sou comprometido em criar soluções eficazes e inovadoras. Trabalho bem em equipe e sou orientado para gerar resultados.
             </p>
-            <p>Currently I'm a student of The Jump Digital School, where I'm learning how to
-            create beautiful and functional websites using HTML, CSS, JavaScript, and WordPress.</p>
+            <p>
+                Atualmente estudo e faço projetos para colocar em meu potfolio até alguma empresa me dar a oportunidade de colocar meu conhecimento em prática e ajudar as pessoas.
+            </p>
 
             <div class="social-media">
                 <a href="#"><i class='bx bxl-facebook'></i></a>
@@ -56,7 +56,7 @@
                 <a href="#"><i class='bx bxl-linkedin'></i></a>
             </div>
 
-            <a href="#" class="btn">Download CV</a>
+            <a href="file:///C:/Users/gabri/Downloads/Curriculo%2011.12%20(1).pdf" download class="btn" >Download CV</a>
         </div>
 
         <div class="profession-container">
