--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <a href="#home" class="active">Home</a>
             <a href="#about">About</a>
             <a href="#services">Services</a>
-            <a href="#portfolio">Portfolio</a>
+            <!-- <a href="#portfolio">Portfolio</a> -->
             <a href="#contact">Contact</a>
         </nav>
 
@@ -39,9 +39,9 @@
     <!-- home section design -->
     <section class="home" id="home">
         <div class="home-content">
-            <h3>Olá, meu nome é</h3>
-            <h1>Gabriel</h1>
-            <h1>Henrique Arndt</h1>
+            <h3 style="line-height: 50px;">Olá, meu nome é</h3>
+            <h1 style="line-height: 50px;">Gabriel Henrique Arndt</h1>
+            <br>
             <p>
                 Sou um desenvolvedor Full Stack JAVA apaixonado por desafios, estou em constante busca pela excelência no desenvolvimento de software. Sou comprometido em criar soluções eficazes e inovadoras. Trabalho bem em equipe e sou orientado para gerar resultados.
             </p>
@@ -50,32 +50,32 @@
             </p>
 
             <div class="social-media">
-                <a href="#"><i class='bx bxl-facebook'></i></a>
-                <a href="#"><i class='bx bxl-twitter'></i></a>
-                <a href="#"><i class='bx bxl-instagram-alt'></i></a>
-                <a href="#"><i class='bx bxl-linkedin'></i></a>
+                <a href="https://api.whatsapp.com/send?phone=5547999607400"><i class='bx bxl-whatsapp'></i></a>
+                <a href="https://www.instagram.com/gabrielharndt/"><i class='bx bxl-instagram-alt'></i></a>
+                <a href="https://www.linkedin.com/in/gabriel-henrique-arndt-874568206/"><i class='bx bxl-linkedin'></i></a>
+                <a href="https://github.com/Gabrielarndt"><i class='bx bxl-github'></i></a>
             </div>
-
-            <a href="file:///C:/Users/gabri/Downloads/Curriculo%2011.12%20(1).pdf" download class="btn" >Download CV</a>
+            <!-- trocar  -->
+            <a href="file:///C:/Users/gabri/Downloads/Curriculo%2011.12%20(1).pdf" download class="btn" >Download CV <div class="i-line-md:cloud-download-outline-loop w-1em h-1em"></div></a>
         </div>
 
         <div class="profession-container">
             <div class="profession-box">
                 <div class="profession" style="--i:0;">
-                    <i class='bx bx-code-alt'></i>
+                    <i class='bx bx-globe'></i>
                     <h3>Web Developer</h3>
                 </div>
                 <div class="profession" style="--i:1;">
-                    <i class='bx bx-camera'></i>
-                    <h3>Photographer</h3>
+                    <i class='bx bx-cog'></i>
+                    <h3>Back-end Developer</h3>
                 </div>
                 <div class="profession" style="--i:2;">
                     <i class='bx bx-palette'></i>
-                    <h3>Web Designer</h3>
+                    <h3>Front-end Developer</h3>
                 </div>
                 <div class="profession" style="--i:3;">
-                    <i class='bx bx-video-recording'></i>
-                    <h3>Videographe</h3>
+                    <i class='bx bx-layer'></i>
+                    <h3>Full stack Developer</h3>
                 </div>
 
                 <div class="circle"></div>
@@ -85,38 +85,31 @@
         </div>
 
         <div class="home-img">
-            <img src="images/home.png" alt="">
+            <img src="" alt="">
         </div>
     </section>
 
     <!-- about section design -->
     <section class="about" id="about">
         <div class="about-img">
-            <img src="images/about.png" alt="">
+            <img src="" alt="">
         </div>
 
         <div class="about-content">
             <h2 class="heading">About <span>Me</span></h2>
             <h3>
-                Hi there, welcome to my website! I'm Cristian,
-                a passionate web developer who enjoys learning new technologies
-                and solving problems with code!
+                Olá, bem-vindo ao meu site! Eu sou um desenvolvedor full stack apaixonado que gosta de aprender novas tecnologias
+                e resolver problemas com código!
             </h3>
             <p>
-                This website is my personal blog where I write about web development
-                topics that interest me and inspire me.
+                Como você já sabe, meu nome é Gabriel, tenho 18 anos e sou natural de Jaraguá do sul, porém moro em Blumenau desde quando eu nasci. Me formei no terceirão em 2023,
+                terminei meu curso tecnico em programação full stack com linguam JAVA no começo do ano de 2024 na ProWay e atualmente estou cursando ADS (análise e desenvolvimentod de sistemas) na Faculdade Estácio.
+                 Também fiz curso de inglês na KNN por dois anos, porém pretendo voltar a estudar e melhorar meu inglês, pois é uma lingua muito importante nos dias de hoje e será cada vez mais.
             </p>
             <p>
-                Thank you for visiting my website and getting to know me better. I hope you
-                enjoyed reading my blog posts and
-                found
-                them useful and informative. If you want to read more of my posts, subscribe
-                to my newsletter where I send
-                weekly
-                updates on web development trends and tips. If you have any feedback or
-                suggestions, please let me know. I'd love to hear from you.
+                Obrigado por visitar meu site e me conhecer melhor, espero que goste do design. Se você tiver algum comentário ou
+                sugestões, por favor me avise. Eu adoraria ouvir de você.
             </p>
-            <a href="#" class="btn">Read More</a>
         </div>
     </section>
 
@@ -127,30 +120,30 @@
         <div class="services-container">
             <div class="services-box">
                 <i class='bx bx-code-alt'></i>
-                <h3>Web Development</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi itaque similique, architecto
-                    eaque ut quas delectus pariatur nesciunt in eligendi mollitia dicta.</p>
-                <a href="#" class="btn">Read More</a>
+                <h3>Desenolvedor Web</h3>
+                <p>Como desenvolvedor web, ofereço soluções digitais criativas e funcionais para atender às necessidades dos meus clientes. Com uma abordagem centrada no usuário e 
+                    uma paixão pela inovação tecnológica, estou comprometido em fornecer produtos de alta qualidade que impulsionem o sucesso online dos meus clientes. </p>
+                <a href="#" class="btn">Learn more</a>
             </div>
             <div class="services-box">
                 <i class='bx bxs-paint'></i>
-                <h3>Graphic Design</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi itaque similique, architecto
-                    eaque ut quas delectus pariatur nesciunt in eligendi mollitia dicta.</p>
-                <a href="#" class="btn">Read More</a>
+                <h3>Desenvolvedor Full Stack</h3>
+                <p> Como desenvolvedor full stack, ofereço uma ampla gama de serviços para atender às necessidades de desenvolvimento web dos meus clientes. Com habilidades 
+                    tanto no front-end quanto no back-end, sou capaz de fornecer soluções completas e integradas que impulsionam o sucesso online dos meus clientes. </p>
+                <a href="#" class="btn">Learn more</a>
             </div>
             <div class="services-box">
                 <i class='bx bx-bar-chart-alt'></i>
-                <h3>Digital Marketing</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi itaque similique, architecto
-                    eaque ut quas delectus pariatur nesciunt in eligendi mollitia dicta.</p>
-                <a href="#" class="btn">Read More</a>
+                <h3>Marketing Digital</h3>
+                <p>Como profissional de marketing digital, ofereço uma gama abrangente de serviços para impulsionar a presença online e o sucesso dos meus clientes. Com uma 
+                    abordagem estratégica e orientada por dados, estou comprometido em fornecer soluções personalizadas que alcancem os objetivos de negócios de cada cliente.</p>
+                <a href="#" class="btn">Learn more</a>
             </div>
         </div>
     </section>
 
     <!-- portfolio section design -->
-    <section class="portfolio" id="portfolio">
+    <!-- <section class="portfolio" id="portfolio">
         <h2 class="heading">Latest <span>Project</span></h2>
 
         <div class="portfolio-container">
@@ -164,7 +157,16 @@
                 </div>
             </div>
             <div class="portfolio-box">
-                <img src="images/portfolio2.jpg" alt="">
+                <img src="" alt="">
+
+                <div class="">
+                    <h4>Web Design</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, ipsam est.</p>
+                    <a href="#"><i class='bx bx-link-external'></i></a>
+                </div>
+            </div>
+            <div class="portfolio-box">
+                <img src="" alt="">
 
                 <div class="portfolio-layer">
                     <h4>Web Design</h4>
@@ -173,7 +175,7 @@
                 </div>
             </div>
             <div class="portfolio-box">
-                <img src="images/portfolio3.jpg" alt="">
+                <img src="" alt="">
 
                 <div class="portfolio-layer">
                     <h4>Web Design</h4>
@@ -182,7 +184,7 @@
                 </div>
             </div>
             <div class="portfolio-box">
-                <img src="images/portfolio4.jpg" alt="">
+                <img src="" alt="">
 
                 <div class="portfolio-layer">
                     <h4>Web Design</h4>
@@ -191,16 +193,7 @@
                 </div>
             </div>
             <div class="portfolio-box">
-                <img src="images/portfolio5.jpg" alt="">
-
-                <div class="portfolio-layer">
-                    <h4>Web Design</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, ipsam est.</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
-                </div>
-            </div>
-            <div class="portfolio-box">
-                <img src="images/portfolio6.jpg" alt="">
+                <img src="" alt="">
 
                 <div class="portfolio-layer">
                     <h4>Web Design</h4>
@@ -209,53 +202,7 @@
                 </div>
             </div>
         </div>
-    </section>
-
-    <!-- testimonial design -->
-    <div class="testimonial-container">
-        <h2 class="heading">Valuable <span>Testimonial</span></h2>
-
-        <div class="testimonial-wrapper">
-            <div class="testimonial-box mySwiper">
-                <div class="testimonial-content swiper-wrapper">
-                    <div class="testimonial-slide swiper-slide">
-                        <img src="images/testimonial1.jpg" alt="">
-                        <h3>Jackson Levi</h3>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem dignissimos aliquid
-                            iure delectus corrupti impedit, beatae aperiam ad iusto nostrum possimus cum pariatur harum
-                            assumenda suscipit a, qui, tempora maxime nulla facere quo ipsum tempore. Atque libero
-                            provident ad aut officia pariatur voluptate quaerat delectus nesciunt, sequi eligendi
-                            aperiam fugit unde nihil, iste similique illum. Dignissimos enim officia consequuntur
-                            dolores.</p>
-                    </div>
-                    <div class="testimonial-slide swiper-slide">
-                        <img src="images/testimonial2.jpg" alt="">
-                        <h3>Flora Ocean</h3>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem dignissimos aliquid
-                            iure delectus corrupti impedit, beatae aperiam ad iusto nostrum possimus cum pariatur harum
-                            assumenda suscipit a, qui, tempora maxime nulla facere quo ipsum tempore. Atque libero
-                            provident ad aut officia pariatur voluptate quaerat delectus nesciunt, sequi eligendi
-                            aperiam fugit unde nihil, iste similique illum. Dignissimos enim officia consequuntur
-                            dolores.</p>
-                    </div>
-                    <div class="testimonial-slide swiper-slide">
-                        <img src="images/testimonial3.jpg" alt="">
-                        <h3>Julian Grayson</h3>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem dignissimos aliquid
-                            iure delectus corrupti impedit, beatae aperiam ad iusto nostrum possimus cum pariatur harum
-                            assumenda suscipit a, qui, tempora maxime nulla facere quo ipsum tempore. Atque libero
-                            provident ad aut officia pariatur voluptate quaerat delectus nesciunt, sequi eligendi
-                            aperiam fugit unde nihil, iste similique illum. Dignissimos enim officia consequuntur
-                            dolores.</p>
-                    </div>
-                </div>
-
-                <div class="swiper-button-next"></div>
-                <div class="swiper-button-prev"></div>
-                <div class="swiper-pagination"></div>
-            </div>
-        </div>
-    </div>
+    </section> -->
 
     <!-- contact section design -->
     <section class="contact" id="contact">
@@ -263,15 +210,15 @@
 
         <form action="#">
             <div class="input-box">
-                <input type="text" placeholder="Full Name">
-                <input type="email" placeholder="Email Address">
+                <input type="text" placeholder="Nome completo">
+                <input type="email" placeholder="Endereço de email">
             </div>
             <div class="input-box">
-                <input type="number" placeholder="Mobile Number">
-                <input type="text" placeholder="Email Subject">
+                <input type="number" placeholder="Número de telefone">
+                <input type="text" placeholder="Assunto">
             </div>
-            <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
-            <input type="submit" value="Send Message" class="btn">
+            <textarea name="" id="" cols="30" rows="10" placeholder="Sua mensagem"></textarea>
+            <input type="submit" value="Enviar" class="btn">
         </form>
     </section>
 
