--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <!-- about section design -->
     <section class="about" id="about">
         <div class="about-img">
-            <img src="" alt="">
+            <img src="https://upload.wikimedia.org/wikipedia/pt/e/ed/Shrek%28personagem%29.jpg" alt="">
         </div>
 
         <div class="about-content">
