--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body> 
 
     <!-- header design -->
     <header class="header">
@@ -85,7 +85,7 @@
         </div>
 
         <div class="home-img">
-            <img src="" alt="">
+            <img src="https://upload.wikimedia.org/wikipedia/pt/e/ed/Shrek%28personagem%29.jpg" alt="">
         </div>
     </section>
 
